HServer/Lib/DBC/Types.hs


class MonadIO m => SqlIO m where
	ioUnsafeInterleave :: m a -> m a
	ioSqlNewString :: CShort -> m (Ptr CChar)
	ioSqlIsValidString :: Ptr CChar -> m SqlReturn
	ioSqlGetString :: Ptr CChar -> m String
	ioSqlGetStringLen :: (Ptr CChar,Int) -> m String
	ioSqlDeleteString :: Ptr CChar -> m ()
	ioSqlNewSmallInt :: m (Ptr CShort)
	ioSqlIsValidSmallInt :: Ptr CShort -> m SqlReturn
	ioSqlGetSmallInt :: Ptr CShort -> m CShort
	ioSqlDeleteSmallInt :: Ptr CShort -> m ()
	ioSqlNewUSmallInt :: m (Ptr CUShort)
	ioSqlIsValidUSmallInt :: Ptr CUShort -> m SqlReturn
	ioSqlGetUSmallInt :: Ptr CUShort -> m CUShort
	ioSqlDeleteUSmallInt :: Ptr CUShort -> m ()
	ioSqlNewInteger :: m (Ptr CLong)
	ioSqlIsValidInteger :: Ptr CLong -> m SqlReturn
	ioSqlGetInteger :: Ptr CLong -> m CLong
	ioSqlDeleteInteger :: Ptr CLong -> m ()
	ioSqlNewUInteger :: m (Ptr CULong)
	ioSqlIsValidUInteger :: Ptr CULong -> m SqlReturn
	ioSqlGetUInteger :: Ptr CULong -> m CULong
	ioSqlDeleteUInteger :: Ptr CULong -> m ()
	ioSqlNewBuffer :: CLong -> m (Ptr ())
	ioSqlIsValidBuffer :: Ptr () -> m SqlReturn
	ioSqlDeleteBuffer :: Ptr () -> m ()
	ioSqlNewEnv :: m SqlEnv
	ioSqlIsValidEnv :: SqlEnv -> m SqlReturn
	ioSqlAllocEnv :: SqlEnv -> m SqlReturn
	ioSqlFreeEnv :: SqlEnv -> m SqlReturn
	ioSqlDeleteEnv :: SqlEnv -> m ()
	ioSqlNewConnect :: m SqlDbc
	ioSqlIsValidConnect :: SqlDbc -> m SqlReturn
	ioSqlAllocConnect :: SqlEnv -> SqlDbc -> m SqlReturn
	ioSqlConnect :: SqlDbc -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> m SqlReturn
	ioSqlDisconnect :: SqlDbc -> m SqlReturn
	ioSqlFreeConnect :: SqlDbc -> m SqlReturn
	ioSqlDeleteConnect :: SqlDbc -> m ()
	ioSqlNewStmt :: m SqlStmt
	ioSqlIsValidStmt :: SqlStmt -> m SqlReturn
	ioSqlAllocStmt :: SqlDbc -> SqlStmt -> m SqlReturn
	ioSqlFreeStmt :: SqlStmt -> m SqlReturn
	ioSqlDeleteStmt :: SqlStmt -> m ()
	ioSqlTables :: SqlStmt -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> m SqlReturn
	ioSqlColumns :: SqlStmt -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> m SqlReturn
	ioSqlPrepare :: SqlStmt -> Ptr CChar -> CLong -> m SqlReturn
	ioSqlNumParams :: SqlStmt -> Ptr CShort -> m SqlReturn
	ioSqlExecute :: SqlStmt -> m SqlReturn
	ioSqlNumResultCols :: SqlStmt -> Ptr CShort -> m SqlReturn
	ioSqlDescribeCol :: SqlStmt -> CUShort -> Ptr CChar -> CShort -> Ptr CShort -> Ptr CULong -> Ptr CShort -> Ptr CShort -> m SqlReturn
	ioSqlFetch :: SqlStmt -> m SqlReturn
	ioSqlGetData :: SqlStmt -> CUShort -> CShort -> Ptr () -> CLong -> Ptr CLong -> m SqlReturn
	ioSqlStmtError :: SqlEnv -> SqlDbc -> SqlStmt -> Ptr CChar -> Ptr CChar -> CLong -> m SqlReturn
	ioSqlConnectError :: SqlEnv -> SqlDbc -> Ptr CChar -> Ptr CChar -> CLong -> m SqlReturn
	ioSqlEnvError :: SqlEnv -> Ptr CChar -> Ptr CChar -> CLong -> m SqlReturn
	ioSqlCloseCursor :: SqlStmt -> m SqlReturn
	ioNewCStringLen :: String -> m (CString,Int)
	ioFree :: CString -> m ()
	ioSqlSetStmtAttr :: SqlStmt -> CLong -> Ptr () -> CLong -> m SqlReturn

instance SqlIO IO where
	ioUnsafeInterleave = unsafeInterleaveIO
	ioSqlNewString = sqlNewString
	ioSqlIsValidString = sqlIsValidString
	ioSqlGetString = peekCString
	ioSqlGetStringLen = peekCStringLen
	ioSqlDeleteString = sqlDeleteString
	ioSqlNewSmallInt = sqlNewSmallInt
	ioSqlIsValidSmallInt = sqlIsValidSmallInt
	ioSqlGetSmallInt = sqlGetSmallInt
	ioSqlDeleteSmallInt = sqlDeleteSmallInt
	ioSqlNewUSmallInt = sqlNewUSmallInt
	ioSqlIsValidUSmallInt = sqlIsValidUSmallInt
	ioSqlGetUSmallInt = sqlGetUSmallInt
	ioSqlDeleteUSmallInt = sqlDeleteUSmallInt
	ioSqlNewInteger = sqlNewInteger
	ioSqlIsValidInteger = sqlIsValidInteger
	ioSqlGetInteger = sqlGetInteger
	ioSqlDeleteInteger = sqlDeleteInteger
	ioSqlNewUInteger = sqlNewUInteger
	ioSqlIsValidUInteger = sqlIsValidUInteger
	ioSqlGetUInteger = sqlGetUInteger
	ioSqlDeleteUInteger = sqlDeleteUInteger
	ioSqlNewBuffer = sqlNewBuffer
	ioSqlIsValidBuffer = sqlIsValidBuffer
	ioSqlDeleteBuffer = sqlDeleteBuffer
	ioSqlNewEnv = sqlNewEnv
	ioSqlIsValidEnv = sqlIsValidEnv
	ioSqlAllocEnv = sqlAllocEnv
	ioSqlFreeEnv = sqlFreeEnv
	ioSqlDeleteEnv = sqlDeleteEnv
	ioSqlNewConnect = sqlNewConnect
	ioSqlIsValidConnect = sqlIsValidConnect
	ioSqlAllocConnect = sqlAllocConnect
	ioSqlConnect = sqlConnect
	ioSqlDisconnect = sqlDisconnect
	ioSqlFreeConnect = sqlFreeConnect
	ioSqlDeleteConnect = sqlDeleteConnect
	ioSqlNewStmt = sqlNewStmt
	ioSqlIsValidStmt = sqlIsValidStmt
	ioSqlAllocStmt = sqlAllocStmt
	ioSqlFreeStmt = sqlFreeStmt
	ioSqlDeleteStmt = sqlDeleteStmt
	ioSqlTables = sqlTables 
	ioSqlColumns = sqlColumns 
	ioSqlPrepare = sqlPrepare
	ioSqlNumParams = sqlNumParams
	ioSqlExecute = sqlExecute
	ioSqlNumResultCols = sqlNumResultCols
	ioSqlDescribeCol = sqlDescribeCol
	ioSqlFetch = sqlFetch
	ioSqlGetData = sqlGetData
	ioSqlStmtError = sqlStmtError
	ioSqlConnectError = sqlConnectError
	ioSqlEnvError = sqlEnvError
	ioSqlCloseCursor = sqlCloseCursor
	ioNewCStringLen = newCStringLen
	ioFree = free
	ioSqlSetStmtAttr = sqlSetStmtAttr

instance (SqlIO m,MonadT t m) => SqlIO (t m) where
	ioUnsafeInterleave = up1 ioUnsafeInterleave
	ioSqlNewString = up . ioSqlNewString
	ioSqlIsValidString = up . ioSqlIsValidString 
	ioSqlGetString = up . ioSqlGetString
	ioSqlGetStringLen = up . ioSqlGetStringLen
	ioSqlDeleteString = up . ioSqlDeleteString
	ioSqlNewSmallInt = up ioSqlNewSmallInt
	ioSqlIsValidSmallInt = up . ioSqlIsValidSmallInt 
	ioSqlGetSmallInt = up . ioSqlGetSmallInt
	ioSqlDeleteSmallInt = up . ioSqlDeleteSmallInt
	ioSqlNewUSmallInt = up ioSqlNewUSmallInt
	ioSqlIsValidUSmallInt = up . ioSqlIsValidUSmallInt 
	ioSqlGetUSmallInt = up . ioSqlGetUSmallInt
	ioSqlDeleteUSmallInt = up . ioSqlDeleteUSmallInt
	ioSqlNewInteger = up ioSqlNewInteger
	ioSqlIsValidInteger = up . ioSqlIsValidInteger 
	ioSqlGetInteger = up . ioSqlGetInteger
	ioSqlDeleteInteger = up . ioSqlDeleteInteger
	ioSqlNewUInteger = up ioSqlNewUInteger
	ioSqlIsValidUInteger = up . ioSqlIsValidUInteger 
	ioSqlGetUInteger = up . ioSqlGetUInteger
	ioSqlNewBuffer = up . ioSqlNewBuffer
	ioSqlIsValidBuffer = up . ioSqlIsValidBuffer
	ioSqlDeleteBuffer = up . ioSqlDeleteBuffer
	ioSqlNewEnv = up ioSqlNewEnv
	ioSqlIsValidEnv = up . ioSqlIsValidEnv
	ioSqlAllocEnv = up . ioSqlAllocEnv
	ioSqlFreeEnv = up . ioSqlFreeEnv
	ioSqlDeleteEnv = up . ioSqlDeleteEnv
	ioSqlNewConnect = up ioSqlNewConnect
	ioSqlIsValidConnect = up . ioSqlIsValidConnect
	ioSqlAllocConnect a = up . ioSqlAllocConnect a
	ioSqlConnect a b c d e f = up . ioSqlConnect a b c d e f
	ioSqlDisconnect = up . ioSqlDisconnect
	ioSqlFreeConnect = up . ioSqlFreeConnect
	ioSqlDeleteConnect = up . ioSqlDeleteConnect
	ioSqlNewStmt = up ioSqlNewStmt
	ioSqlIsValidStmt = up . ioSqlIsValidStmt
	ioSqlAllocStmt a = up . ioSqlAllocStmt a
	ioSqlFreeStmt = up . ioSqlFreeStmt
	ioSqlDeleteStmt = up . ioSqlDeleteStmt
	ioSqlDeleteUInteger = up . ioSqlDeleteUInteger
	ioSqlTables a b c d e f g h = up . ioSqlTables a b c d e f g h
	ioSqlColumns a b c d e f g h = up . ioSqlColumns a b c d e f g h
	ioSqlPrepare s q = up . ioSqlPrepare s q
	ioSqlNumParams s = up . ioSqlNumParams s
	ioSqlExecute = up . ioSqlExecute
	ioSqlNumResultCols s = up . ioSqlNumResultCols s
	ioSqlDescribeCol a b c d e f g = up . ioSqlDescribeCol a b c d e f g
	ioSqlFetch = up . ioSqlFetch 
	ioSqlGetData a b c d e = up . ioSqlGetData a b c d e
	ioSqlStmtError a b c d e = up . ioSqlStmtError a b c d e
	ioSqlConnectError a b c d = up . ioSqlConnectError a b c d
	ioSqlEnvError a b c = up . ioSqlEnvError a b c
	ioSqlCloseCursor = up . ioSqlCloseCursor 
	ioNewCStringLen = up . ioNewCStringLen
	ioFree = up . ioFree
	ioSqlSetStmtAttr a b c = up . ioSqlSetStmtAttr a b c

------------------------------------------------------------------------------

foreign import ccall unsafe "sqlNewEnv"
  sqlNewEnv :: IO SqlEnv

foreign import ccall unsafe "sqlIsValidEnv"
  sqlIsValidEnv :: SqlEnv -> IO SqlReturn

foreign import ccall unsafe "sqlDeleteEnv"
  sqlDeleteEnv :: SqlEnv -> IO ()

foreign import ccall unsafe "sqlAllocEnv"
  sqlAllocEnv :: SqlEnv -> IO SqlReturn

foreign import ccall unsafe "sqlFreeEnv"
  sqlFreeEnv :: SqlEnv -> IO SqlReturn

foreign import ccall unsafe "sqlNewConnect"
  sqlNewConnect :: IO SqlDbc

foreign import ccall unsafe "sqlIsValidConnect"
  sqlIsValidConnect :: SqlDbc -> IO SqlReturn

foreign import ccall unsafe "sqlDeleteConnect"
  sqlDeleteConnect :: SqlDbc -> IO ()

foreign import ccall unsafe "sqlAllocConnect"
  sqlAllocConnect :: SqlEnv -> SqlDbc -> IO SqlReturn

foreign import ccall unsafe "sqlFreeConnect"
  sqlFreeConnect :: SqlDbc -> IO SqlReturn

foreign import ccall unsafe "sqlConnect"
  sqlConnect :: SqlDbc -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> IO SqlReturn

foreign import ccall unsafe "sqlDisconnect"
  sqlDisconnect :: SqlDbc -> IO SqlReturn

foreign import ccall unsafe "sqlNewStmt"
  sqlNewStmt :: IO SqlStmt

foreign import ccall unsafe "sqlIsValidStmt"
  sqlIsValidStmt :: SqlStmt -> IO SqlReturn

foreign import ccall unsafe "sqlDeleteStmt"
  sqlDeleteStmt :: SqlStmt -> IO ()

foreign import ccall unsafe "sqlAllocStmt"
  sqlAllocStmt :: SqlDbc -> SqlStmt -> IO SqlReturn

foreign import ccall unsafe "sqlFreeStmt"
  sqlFreeStmt :: SqlStmt -> IO SqlReturn

foreign import ccall unsafe "sqlNewBuffer"
  sqlNewBuffer :: CLong -> IO (Ptr ())

foreign import ccall unsafe "sqlIsValidBuffer"
  sqlIsValidBuffer :: Ptr () -> IO SqlReturn

foreign import ccall unsafe "sqlDeleteBuffer"
  sqlDeleteBuffer :: Ptr () -> IO ()

foreign import ccall unsafe "sqlSetStmtAttr"
  sqlSetStmtAttr :: SqlStmt -> CLong -> Ptr () -> CLong -> IO SqlReturn

foreign import ccall unsafe "sqlPrepare"
  sqlPrepare :: SqlStmt -> Ptr CChar -> CLong -> IO SqlReturn

foreign import ccall unsafe "sqlNumParams"
  sqlNumParams :: SqlStmt -> Ptr CShort -> IO SqlReturn

foreign import ccall unsafe "sqlCloseCursor"
  sqlCloseCursor :: SqlStmt -> IO SqlReturn

foreign import ccall unsafe "sqlExecute"
  sqlExecute :: SqlStmt -> IO SqlReturn

foreign import ccall unsafe "sqlNewUSmallInt"
  sqlNewUSmallInt :: IO (Ptr CUShort)

foreign import ccall unsafe "sqlIsValidUSmallInt"
  sqlIsValidUSmallInt :: Ptr CUShort -> IO SqlReturn

foreign import ccall unsafe "sqlGetUSmallInt"
  sqlGetUSmallInt :: Ptr CUShort -> IO CUShort

foreign import ccall unsafe "sqlDeleteUSmallInt"
  sqlDeleteUSmallInt :: Ptr CUShort -> IO ()

foreign import ccall unsafe "sqlNewSmallInt"
  sqlNewSmallInt :: IO (Ptr CShort)

foreign import ccall unsafe "sqlIsValidSmallInt"
  sqlIsValidSmallInt :: Ptr CShort -> IO SqlReturn

foreign import ccall unsafe "sqlDeleteSmallInt"
  sqlDeleteSmallInt :: Ptr CShort -> IO ()

foreign import ccall unsafe "sqlNumResultCols"
  sqlNumResultCols :: SqlStmt -> Ptr CShort -> IO SqlReturn

foreign import ccall unsafe "sqlGetSmallInt"
  sqlGetSmallInt :: Ptr CShort -> IO CShort

foreign import ccall unsafe "sqlNewString"
  sqlNewString :: CShort -> IO (Ptr CChar)

foreign import ccall unsafe "sqlIsValidString"
  sqlIsValidString :: Ptr CChar -> IO SqlReturn

foreign import ccall unsafe "sqlDeleteString"
  sqlDeleteString :: Ptr CChar -> IO ()

foreign import ccall unsafe "sqlNewUInteger"
  sqlNewUInteger :: IO (Ptr CULong)

foreign import ccall unsafe "sqlIsValidUInteger"
  sqlIsValidUInteger :: Ptr CULong -> IO SqlReturn

foreign import ccall unsafe "sqlDeleteUInteger"
  sqlDeleteUInteger :: Ptr CULong -> IO ()

foreign import ccall unsafe "sqlTables"
  sqlTables :: SqlStmt -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> IO SqlReturn

foreign import ccall unsafe "sqlColumns"
  sqlColumns :: SqlStmt -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> Ptr CChar -> CShort -> IO SqlReturn

foreign import ccall unsafe "sqlDescribeCol"
  sqlDescribeCol :: SqlStmt -> CUShort -> Ptr CChar -> CShort -> Ptr CShort -> Ptr CULong -> Ptr CShort -> Ptr CShort -> IO SqlReturn

foreign import ccall unsafe "sqlGetUInteger"
  sqlGetUInteger :: Ptr CULong -> IO CULong
